--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
               >Novi proizvod</a
             >
           </li>
-          <!-- Dodaj ostale stavke menija po potrebi -->
+          <!-- Ostale stavke menija po potrebi -->
         </ul>
       </div>
     </nav>
